--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>2.13.4.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.25.27</version>
+        </dependency>
+
     </dependencies>
 
     <build>
